--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Instant Mailer - Send simple text mails instantly">
+<meta name="description" content="Send a Simple Note">
 <meta name="author" content="Suchen Oguri">
 
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 
-<title>Instant Mailer - Send simple text mails instantly</title>
+<title>Send a Simple Note</title>
 
 
 <link href="https://cdn.jotfor.ms/static/formCss.css?3.3.3021" rel="stylesheet" type="text/css" />
@@ -77,7 +77,7 @@ JotForm.paymentExtrasOnTheFly([null,null,{"name":"submit2","qid":"2","text":"Sen
 		<nav class="navbar navbar-default" role="navigation">
     	  <div class="container"   style="width: 430px;">		    
 		    <div class="navbar-header">		     
-		       <div class="navbar-brand navbar-brand-centered"><a href="index.html">Instant Mailer - Send simple text mails instantly</a></div>
+		       <div class="navbar-brand navbar-brand-centered"><a href="index.html">Send a Simple Note - Send Note to anyone instantly</a></div>
 		    </div>		   
 		  </div>
 		</nav>			
