--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ JotForm.paymentExtrasOnTheFly([null,null,{"name":"submit2","qid":"2","text":"Sen
         <div id="cid_2" class="form-input-wide">
           <div style="margin-left:156px;" class="form-buttons-wrapper">
             <button id="input_2" type="submit" class="form-submit-button" data-component="button">
-              Send your Instant Mail..
+              Send Your Simple Note..
             </button>
           </div>
         </div>
