brand name rename

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ JotForm.paymentExtrasOnTheFly([null,null,{"name":"submit2","qid":"2","text":"Sen
 		<nav class="navbar navbar-default" role="navigation">
     	  <div class="container"   style="width: 430px;">		    
 		    <div class="navbar-header">		     
-		       <div class="navbar-brand navbar-brand-centered"><a href="index.html">Send a Simple Note - Send Note to anyone instantly</a></div>
+		       <div class="navbar-brand navbar-brand-centered" style=" width: 450px;"><a href="index.html">Send a Simple Note - Send Note to anyone instantly</a></div>
 		    </div>		   
 		  </div>
 		</nav>			
