--- a/thanks.html
+++ b/thanks.html
@@ -21,7 +21,7 @@
 		<nav class="navbar navbar-default" role="navigation">
     	  <div class="container"   style="width: 430px;">		    
 		    <div class="navbar-header">		     
-		       <div class="navbar-brand navbar-brand-centered"><a href="index.html">Send a Simple Note - Send Note to anyone instantly</a></div>
+		       <div class="navbar-brand navbar-brand-centered" style=" width: 450px;"><a href="index.html">Send a Simple Note - Send Note to anyone instantly</a></div>
 		    </div>		   
 		  </div>
 		</nav>			
@@ -35,7 +35,7 @@
 					
 					
 					<h3> Thanks!!</h3>					
-					<h4> Your Instant Mail has been sent.  </h4>
+					<h4> Your Simple mail has been sent. </h4>
 					<br/>
 					<h5> <a href="index.html">Do you want to Send another??</a></h5>
 					<br/>
