--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <title>Send a Simple Note</title>
 
-
+<link href="images/favicon.ico" rel="icon" type="image/x-icon" />
 <link href="https://cdn.jotfor.ms/static/formCss.css?3.3.3021" rel="stylesheet" type="text/css" />
 <link type="text/css" rel="stylesheet" href="https://cdn.jotfor.ms/css/styles/nova.css?3.3.3021" />
 
