--- a/thanks.html
+++ b/thanks.html
@@ -11,7 +11,7 @@
 <link href="css/style.css" rel="stylesheet">
 
 <title>Send a Simple Note</title>
-
+<link href="images/favicon.ico" rel="icon" type="image/x-icon" />
 </head>
 <body>
 
