--- a/thanks.html
+++ b/thanks.html
@@ -35,7 +35,7 @@
 					
 					
 					<h3> Thanks!!</h3>					
-					<h4> Your Simple mail has been sent. </h4>
+					<h4> Your Simple note has been sent. </h4>
 					<br/>
 					<h5> <a href="index.html">Do you want to Send another??</a></h5>
 					<br/>
